snapshots/public/github-rest-3.1/lib/models/errors/repos_check_private_vulnerability_reporting_error.dart
// GENERATED CODE - DO NOT MODIFY BY HAND

import 'dart:convert';import 'package:degenerate_runtime/degenerate_runtime.dart';import 'package:pub_github_rest_3_1/models/basic_error.dart';sealed class ReposCheckPrivateVulnerabilityReportingError {const ReposCheckPrivateVulnerabilityReportingError();

factory ReposCheckPrivateVulnerabilityReportingError.fromResponse(ApiResponse response) {     try {
      return switch (response.statusCode) {
        422 => ReposCheckPrivateVulnerabilityReportingError$422(BasicError.fromJson(jsonDecode(response.body) as Map<String, dynamic>)),
        _ => ReposCheckPrivateVulnerabilityReportingError$Unknown(response.statusCode, response.body),
      };
    } on Object {
      return ReposCheckPrivateVulnerabilityReportingError$Unknown(response.statusCode, response.body);
    } }

int get statusCode;
 }
final class ReposCheckPrivateVulnerabilityReportingError$422 extends ReposCheckPrivateVulnerabilityReportingError {const ReposCheckPrivateVulnerabilityReportingError$422(this.error);

final BasicError error;

@override int get statusCode => 422;

 }
final class ReposCheckPrivateVulnerabilityReportingError$Unknown extends ReposCheckPrivateVulnerabilityReportingError {const ReposCheckPrivateVulnerabilityReportingError$Unknown(this.statusCode, this.rawBody, );

@override final int statusCode;

final String? rawBody;

 }
typedef ReposCreateOrUpdateEnvironmentError = ReposCheckPrivateVulnerabilityReportingError;
typedef ReposDisablePrivateVulnerabilityReportingError = ReposCheckPrivateVulnerabilityReportingError;
typedef ReposEnablePrivateVulnerabilityReportingError = ReposCheckPrivateVulnerabilityReportingError;
